refactor: TableGroupRequest DTO 생성